fixed footer links on mobile

--- a/style.css
+++ b/style.css
@@ -1235,5 +1235,6 @@ footer.showSection {
     .footer-links a {
         margin: 1rem;
         font-size: 1.5rem;
+        text-shadow: none;
     }
 }
